# CalibFW

./: .cproject  .gitignore  .project  CalibFW.kdev4  DOCUMENTATION.md  DOCUMENTATION.txt  JsonConfigBase.py  LocalConfigBase.py  Makefile  Makefile.am  README.md  ZPJBase.py  ZPJConfiguration.py  configure.ac  data2010.py  data2011.py  doublemu2010.py  doublemu2011.py  joram_data2011.py  joram_dataMC_comparison.py  makefile_test  mc_fall10_dy.py  mc_spring11_dy.py  mc_summer11_dy.py  plot_all.sh  process_DYToMuMu_Summer11-PU-comp.py  process_DYToMuMu_Summer11-PU-powheg.py  process_DYToMuMu_Summer11-PU.py  process_May10ReReco-comp.py  process_May10ReReco.py  process_PromptReco.py  process_Run2011A-All.py  process_ZJetToMuMu_Summer11_herwig.py  process_data.py  process_file.py  process_kappa_data.py  process_kappa_mc.py  process_kappa_test.py  process_mc.py  process_mc_dy.py  (+11 more)
.kdev4/: CalibFW.kdev4
Paper/: Diplomarbeit_Thomas_process_data_extrapolation.py  Diplomarbeit_Thomas_process_data_extrapolation.py.json  Diplomarbeit_Thomas_process_mc_pu_extrapolation.py  Diplomarbeit_Thomas_process_mc_pu_extrapolation.py.json  Paper_process_data_extrapolation.py  Paper_process_data_extrapolation.py.json  Paper_process_data_extrapolation_bigger2vtx.py  Paper_process_data_extrapolation_bigger2vtx.py.json  Paper_process_data_extrapolation_lite.py  Paper_process_data_extrapolation_lite.py.json  Paper_process_data_extrapolation_smaller2vtx.py  Paper_process_data_extrapolation_smaller2vtx.py.json  Paper_process_mc_pu_extrapolation.py  Paper_process_mc_pu_extrapolation.py.json  Paper_process_mc_pu_extrapolation_bigger2vtx.py  Paper_process_mc_pu_extrapolation_bigger2vtx.py.json  Paper_process_mc_pu_extrapolation_lite.py  Paper_process_mc_pu_extrapolation_lite.py.json  Paper_process_mc_pu_extrapolation_smaller2vtx.py  Paper_process_mc_pu_extrapolation_smaller2vtx.py.json
Zplusjet/EventCounter/: BuildFile  BuildFile.xml  eventcounter_cfg.py
Zplusjet/ZplusjetTreeMaker/: BuildFile  BuildFile.xml  TreeMaker_joram_cfg.py  TreeMaker_joram_mc_cfg.py  TreeMaker_thomas_cfg.py  makeLocalJob.py  produce_jets_spectra_cfg.py
cfg/GridControl/: 2011-05-26_TH_424_MC.conf  2011-05-26_TH_424_Mu.conf  Danilo_background_grid_mc.cfg  Danilo_zmumu_naf_mc.cfg  Danilo_zplusjet_naf_data.cfg  Thomas_grid_DYToMuMu_Summer11-PU.cfg  Thomas_grid_Run2011A-May10ReReco.cfg  Thomas_grid_data.cfg  Thomas_grid_data_2010a_reco.cfg  Thomas_grid_data_2010b.cfg  Thomas_grid_data_2010b_reco.cfg  Thomas_grid_mcfall10.cfg  Thomas_grid_mcfall10_dy.cfg  Thomas_grid_mcfall10_dy_pu.cfg  Thomas_grid_mcfall10_madgraph.cfg  Thomas_grid_mcfall10pileup.cfg  Thomas_zplusjet_naf_data.cfg  Thomas_zplusjet_naf_mc.cfg
cfg/Kappa/: gcdata.conf  gcmc.conf  skim_Data_42x_ZJet.py  skim_Data_44_ZJet.py  skim_MC_42x_ZJet.py
cfg/SkimmingCalibFW/: extract_jec.py  (+25 more)
data/: excal.xcf  lumiPerRun.csv
include/: DrawBase.h  EventData.h  EventPipeline.h  EventPipelineRunner.h  EventPipeline_test.h  FilterBase.h  Json_wrapper.h  OpenMP-Support.h  PipelineSettings.h  PtBinWeighter.h  RootIncludes.h  jsonParser.h
interface/: CanvasHolder.h  CompleteJetCorrector.h  CutHandler.h  CutStatistics.h  DrawBase.h  DrawModifier.h  DrawModifierBase.h  EventData.h  EventData_test.h  EventPipeline.h  EventPipelineRunner.h  EventPipelineRunner_test.h  EventPipeline_test.h  EventStorer.h  ExtHisto.h  FilterBase.h  GlobalInclude.h  JetCorrectorParameters.h  Json_wrapper.h  MinimalParser.h  OpenMP-Support.h  PipelineSettings.h  PlotCommon.h  PtBinWeighter.h  RootIncludes.h  Utilities.h  ZJetConsumer.h  ZJetCuts.h  ZJetCuts_test.h  ZJetDrawConsumer.h  ZJetEventStorer.h  ZJetFilter.h  ZJetMetaDataProducer.h  ZJetMetaProducer_test.h  ZJetPipeline.h  ZJetPipeline_test.h  ZJetTestSupport.h  common_functions.h  read_csv.h  writeTxt.h
macros/: CalibFwPlotBase.py  TDR_Style.cxx  background.py  clusterplots.py  dictionaries.py  eventsPerLumi.py  fit.py  getPUTruthFromSkim.C  getROOT.py  getroot.py  labels.py  plot.py  plot2012.py  plot2d.py  plotBase.py  plot_2011A_B.py  plot_2011A_thomas.py  plot_composition.py  plot_dhaitz.py  plot_extrapolation.py  plot_extrapolation2.py  plot_fractions.py  plot_mikko.py  plot_pfnopu.py  plot_resolution.py  plot_resolution_new.py  plot_sandbox.py  plot_tagging.py  plot_vbf.py  plotbase.py  plotdatamc.py  plotextrapolation.py  plotextrapolation_mc_data_ratio.py  plotflavour.py  plotfractions.py  plotresponse.py  plots_diplomarbeit.py  response_histo_paper.py  response_matching_paper.py  responsetools.py  (+2 more)
matplotlib_test/: myhist.py
plotting/: balances.py  merlin.py  plot.py  plot1d.py  plot2012.py  plot2d.py  plot_sandbox.py  plot_tagging.py  plot_vbf.py  plotbase.py  plotcollections.py  plotdatamc.py  plotflavour.py  plotfractions.py  plotresponse.py
progs/: .kdev_include_paths  CalibFwPlotBase.py  apply_L3_corr.cpp  bins.cpp  check_corr.py  create_L3_corr.cpp  create_MC_MC_comparison.cpp  create_Response.cpp  create_dataMC_comparison_zpj.cpp  intlumiprovider.py  make_extrapolation.cpp  make_plots_Paper.cpp  make_zplusjet_sys.cpp  plotNumEvtOverLumi.py  plot_flavour.py  provide_datapoints.cpp  resp_cuts.cpp  resp_cuts_test.cpp  weightCalc.cpp
scripts/: CalibFWenv.sh  ClosureEnv.sh  Doxygen.cfg  artus  artus.py  astylerc  bisect.sh  combineJSON.sh  compareFiles.py  compareJEC.sh  config_py2cpp.py  genHtml.py  getPUscript  gui-artus.sh  gui-merlin.sh  ignored  ignored.sh  ini_excalibur  json2txt.py  latestjson.sh  merlin  merlin.py  parallelmerge.sh  plot_dr.cpp  plotsync.sh  pre-commit  readMetadataFromPlot.py  redo.sh  simpleDownloadFromSE.sh  sum.sh  syncto.sh  tbrowser.cxx  test.sh  weightCalc.py
src/: CanvasHolder.cc  DrawBase.cc  EventData.cc  EventPipelineRunner.cc  ExtHisto.cc  FactorizedJetCorrector.cc  GlobalInclude.cc  GlobalInclude.h  JetCorrectorParameters.cc  Json_wrapper.cc  MinimalParser.cc  SimpleJetCorrector.cc  ZJetCuts.cc  ZJetPipeline.cc  artus.cc  closure.cc  closure.cpp  closure_test.cpp  common_functions.cc  jsonParser.cc  makefile  read_csv.cc  resp_cuts.cpp  resp_cuts_test.cpp  writeTxt.cc
test/: myconfigreader.cxx
(+764 files in other folders)
